# RPi-Cpp-Toolchain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/hello-world/: CMakeLists.txt  hello-world.cpp
applications/hello-world/cmake/: Install.cmake
cmake/: Common-RPi-Toolchain.cmake  RPi-Toolchain-ARMv6.cmake  RPi3-Toolchain-AArch32.cmake  RPi3-Toolchain-AArch64.cmake  RPi3-Toolchain-ARMv8.cmake  aarch64-rpi3-linux-gnu.cmake  armv6-rpi-linux-gnueabihf.cmake  armv8-rpi3-linux-gnueabihf.cmake
docker/: Dockerfile  Dockerfile.backup  Dockerfile2  build-and-export-toolchain.sh  copy-to-rpi.sh  docker-compose.yml  get-ubuntu-rootfs.sh  setup.py
extra/python/cross-compile-module/cython/: .gitignore  README.md  build-docker.sh  build.sh  hello.pyx  pyproject.toml  setup.py
extra/python/cross-compile-module/cython/docker/: Dockerfile
extra/python/cross-compile-module/py-build-cmake/qpalm/: .gitignore  README.md  build-docker.sh  build.sh  py-build-cmake.cross.toml.in
extra/python/cross-compile-module/spam/: .gitignore  README.md  build-docker.sh  build.sh  setup.py  spammodule.c
extra/python/cross-compile-module/spam/docker/: Dockerfile
scripts/: install-cross-gdb.sh  install-docker-binfmt.sh  install-docker-buildx.sh  install-opencv.sh  install-zbar.sh  run-docker.sh
src/: CMakeLists.txt
src/greeter/: CMakeLists.txt
src/greeter/cmake/: Config.cmake.in  Install.cmake
src/greeter/include/greeter/: greeter.hpp
src/greeter/src/: greeter.cpp
src/greeter/test/: CMakeLists.txt  greeter.test.cpp
toolchain/: README.md  build-and-export-toolchain.sh  build-and-export.sh  build-and-push-host.sh  build-and-push.sh  build-host.sh  build.sh  clean.sh  pull-and-export-toolchain.sh  pull-and-export.sh  toolchain.sh
toolchain/docker/: README.md  docker-compose.yml  push.sh
toolchain/docker/aarch32/: build.sh
toolchain/docker/aarch32-installed/: Dockerfile
toolchain/docker/aarch32-toolchain/: Dockerfile
toolchain/docker/aarch32/aarch32-cross-build/: Dockerfile  build.sh
toolchain/docker/aarch32/aarch32-cross-build/install-scripts/: RPi3.toolchain.cmake.cmake  curl.sh  dbm.sh  ffmpeg.sh  git.sh  libffi.sh  opencv.sh  openssl-build.sh  openssl.sh  python.sh  readline.sh  vpx.sh  x264.sh
toolchain/docker/aarch32/aarch32-cross-build/patches/: npymath.ini.patch
toolchain/docker/aarch32/aarch32-cross-build/tools/: armv8-rpi3-linux-gnu-pkg-config  (+2 more)
toolchain/docker/aarch32/aarch32-cross-native-toolchain/: Dockerfile  build.sh  config
toolchain/docker/aarch32/aarch32-cross-toolchain/: Dockerfile
toolchain/docker/aarch64/: build.sh
toolchain/docker/aarch64-installed/: Dockerfile
toolchain/docker/aarch64-toolchain/: Dockerfile
toolchain/docker/aarch64/aarch64-cross-build/: Dockerfile  build.sh
toolchain/docker/aarch64/aarch64-cross-native-toolchain/: build.sh
toolchain/docker/aarch64/aarch64-cross-toolchain-distcc/: build.sh  docker-compose.yml
toolchain/docker/base-ubuntu/: Dockerfile  build.sh
toolchain/docker/crosstool-ng/: Dockerfile
toolchain/docker/crosstool-ng-master/: Centos.dockerfile  Dockerfile  build.sh
toolchain/docker/merged/: toolchain.sh
toolchain/docker/merged/base-ubuntu/: Dockerfile
toolchain/docker/merged/cross-build/: Dockerfile
toolchain/docker/merged/cross-native-toolchain/: Dockerfile  aarch64-rpi3-linux-gnu.config  armv6-rpi-linux-gnueabihf.config  armv8-rpi3-linux-gnueabihf.config
toolchain/docker/merged/cross-toolchain/: Dockerfile  aarch64-rpi3-linux-gnu.config  armv6-rpi-linux-gnueabihf.config  armv8-rpi3-linux-gnueabihf.config
toolchain/docker/merged/env/: aarch64-rpi3-linux-gnu.env  armv6-rpi-linux-gnueabihf.env  armv8-rpi3-linux-gnueabihf.env  env2arg.py
toolchain/docker/rpi/armv6/: build.sh
toolchain/docker/rpi3/aarch64/: build.sh
toolchain/docker/rpi3/armv8/: build.sh
toolchain/docker/test/cross-build/: Dockerfile
toolchain/docker/test/env/: armv6-rpi-linux-gnueabihf.env  armv8-rpi3-linux-gnueabihf.env
toolchain/dockerx/: build-and-export-toolchain.sh  build.sh
toolchain/dockerx/aarch32/: build.sh
toolchain/dockerx/aarch32/aarch32-cross-build/: Dockerfile  build-numpy-scipy-crossenv.sh  build.sh
toolchain/dockerx/aarch32/aarch32-cross-toolchain/: Dockerfile  build.sh  config
toolchain/dockerx/aarch32/aarch32-installed/: Dockerfile  RPi3.toolchain.cmake  build.sh
toolchain/dockerx/aarch32/aarch32-installed-raspbian-x/: Dockerfile  build.sh
toolchain/dockerx/aarch64/: build.sh
toolchain/dockerx/aarch64-cross-native-toolchain/: Dockerfile
toolchain/dockerx/aarch64-cross-toolchain/: Dockerfile  build.sh  config  config.old
toolchain/dockerx/aarch64-cross-toolchain-distcc/: Dockerfile  docker-compose.yml
toolchain/dockerx/aarch64-installed/: Dockerfile  build-numpy-scipy-crossenv.sh
toolchain/dockerx/aarch64-installed-distcc/: Dockerfile  build.sh
toolchain/dockerx/aarch64-installed-raspbian-x/: Dockerfile  build.sh
toolchain/dockerx/aarch64-installed-tools/: Dockerfile  RPi3.toolchain.cmake  build.sh  git-2.25.0.patch  include_server.patch
toolchain/dockerx/aarch64-installed-tools-x/: Dockerfile  build.sh  wrapper.sh
toolchain/dockerx/aarch64-installed-x/: build.sh
toolchain/dockerx/aarch64-toolchain-installed/: build.sh
toolchain/dockerx/aarch64/aarch64-cross-native-toolchain/: config
toolchain/dockerx/aarch64/aarch64-cross-toolchain-distcc/: Dockerfile  docker-compose.yml
toolchain/dockerx/aarch64/aarch64-installed/: Dockerfile  build-numpy-scipy-crossenv.sh  build.sh  log  npymath.ini.patch  test.c
toolchain/dockerx/aarch64/aarch64-installed-tools/: Dockerfile  make-4.2.patch  pump.patch
toolchain/dockerx/aarch64/aarch64-installed-tools-x/: build.sh
toolchain/dockerx/aarch64/aarch64-installed-x/: Dockerfile  build.sh
toolchain/dockerx/aarch64/aarch64-toolchain-installed/: Dockerfile
toolchain/dockerx/base-ubuntu/: Dockerfile  build.sh
toolchain/dockerx/crosstool-ng-master/: Dockerfile  build.sh
toolchain/scripts/: README.md  export-toolchain.sh  export.sh  parse-input.sh
(+175 files in other folders)
